@@ -22,73 +22,7 @@ my %WriteMakefileArgs = (
   "NAME" => "recommended",
   "PREREQ_PM" => {
     "Carp" => 0,
-    "Module::Runtime" => 0,
-    "strict" => 0,
-    "version" => 0,
-    "warnings" => 0
-  },
-  "TEST_REQUIRES" => {
-    "ExtUtils::MakeMaker" => 0,
-    "File::Spec" => 0,
-    "Test::More" => 0
-  },
-  "VERSION" => "0.001",
-  "test" => {
-    "TESTS" => "t/*.t"
-  }
-);
-
-
-my %FallbackPrereqs = (
-  "Carp" => 0,
-  "ExtUtils::MakeMaker" => "6.17",
-  "File::Spec" => 0,
-  "Module::Runtime" => 0,
-  "Test::More" => 0,
-  "strict" => 0,
-  "version" => 0,
-  "warnings" => 0
-);
-
-
-unless ( eval { ExtUtils::MakeMaker->VERSION(6.63_03) } ) {
-  delete $WriteMakefileArgs{TEST_REQUIRES};
-  delete $WriteMakefileArgs{BUILD_REQUIRES};
-  $WriteMakefileArgs{PREREQ_PM} = \%FallbackPrereqs;
-}
-
-delete $WriteMakefileArgs{CONFIGURE_REQUIRES}
-  unless eval { ExtUtils::MakeMaker->VERSION(6.52) };
-
-WriteMakefile(%WriteMakefileArgs);
-
-
-
-HASH(0x7f92d506bf48)
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v5.023.
-use strict;
-use warnings;
-
-use 5.008001;
-
-use ExtUtils::MakeMaker 6.17;
-
-
-
-my %WriteMakefileArgs = (
-  "ABSTRACT" => "Load a recommended module and don't die if it doesn't exist",
-  "AUTHOR" => "David Golden <dagolden\@cpan.org>",
-  "CONFIGURE_REQUIRES" => {
-    "ExtUtils::MakeMaker" => "6.17"
-  },
-  "DISTNAME" => "recommended",
-  "EXE_FILES" => [],
-  "LICENSE" => "apache",
-  "MIN_PERL_VERSION" => "5.008001",
-  "NAME" => "recommended",
-  "PREREQ_PM" => {
-    "Carp" => 0,
-    "Module::Runtime" => 0,
+    "Module::Runtime" => "0.014",
     "strict" => 0,
     "version" => 0,
     "warnings" => 0
@@ -109,7 +43,7 @@ my %FallbackPrereqs = (
   "Carp" => 0,
   "ExtUtils::MakeMaker" => "6.17",
   "File::Spec" => 0,
-  "Module::Runtime" => 0,
+  "Module::Runtime" => "0.014",
   "Test::More" => 0,
   "strict" => 0,
   "version" => 0,
