@@ -2,6 +2,11 @@ Revision history for recommended
 
 {{$NEXT}}
 
+    [Fixes]
+
+    - Throws an error if a recommended/suggested module fails to compile
+      instead of silently ignoring this case
+
 0.001     2014-11-05 16:37:00-05:00 America/New_York
 
     - First release
